--- a/ubuntu.html
+++ b/ubuntu.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ubuntu customizer by the Customizer project">
-    <title>Hello, World!</title>
+    <title>Customizer: Ubuntu</title>
     <!--Materialize CSS and JS-->
     <link rel="stylesheet" href="materialize.min.css" />
     <script src="materialize.min.js"></script>
